# rust-axum-media-upload

./: Cargo.toml
src/: main.rs
src/media/: handlers.rs  views.rs
